Add positioning of elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false">
-            <button><img src="../images/search.png" alt="" ></button>
+            <button><img src="images/search.png" alt="" ></button>
+        </div>
+        <div class="weather">
+            <img src="images/rain.png" alt="">
         </div>
     </div>
 </body>
