--- a/index.html
+++ b/index.html
@@ -15,8 +15,40 @@
             <button><img src="images/search.png" alt="" ></button>
         </div>
         <div class="weather">
-            <img src="images/rain.png" alt="">
+            <img src="images/rain.png" class="weather-icon" alt="">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">London</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div>
+                        <p class="wind">15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script>
+        const apiKey = "f4db743a62745780c1e4b4f914f349d4";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+
+        async function checkWeather(){
+            const response = await fetch(apiUrl + `&appid=${apiKey}`);
+            var data = await response.json();
+
+            console.log(data);
+        }
+
+        checkWeather();
+    </script>
 </body>
 </html>
