--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@
 
     <script>
         const apiKey = "f4db743a62745780c1e4b4f914f349d4";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=london";
 
         async function checkWeather(){
             const response = await fetch(apiUrl + `&appid=${apiKey}`);
             var data = await response.json();
 
             console.log(data);
+
+            document.querySelector(".city").innerHTML = data.name;
+            document.querySelector(".temp").innerHTML = data.main.temp + "°c";
+            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+            document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
         }
 
         checkWeather();
