Fix display bugs

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 
             const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
 
-            if(response.status = 404){
+            if(response.status == 404){
                 document.querySelector(".error").style.display = "block";
                 document.querySelector(".weather").style.display = "none";
+                console.log(response.status)
             } else {
                 var data = await response.json();
                 document.querySelector(".city").innerHTML = data.name;
@@ -80,13 +81,8 @@
 
                 document.querySelector(".weather").style.display = "block";
                 document.querySelector(".error").style.display = "none";
-
-
+        
             }
-
-
-
-           
         }
 
         searchBtn.addEventListener("click", ()=>{
